# openapi.yaml
@@ -78,12 +78,26 @@ paths:
             schema:
               $ref: '#/components/schemas/loadbalancer'
       responses:
-        '200':
+        '201':
           description: Named loadbalancer
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/loadbalancer'
+        default:
+          description: unexpected error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/error'
+    delete:
+      description: Delete a loadbalancer
+      operationId: DeleteLoadBalancer
+      parameters:
+        - $ref: '#/components/parameters/name'
+      responses:
+        '200':
+          description: Deleted Loadbalancer
         default:
           description: unexpected error
           content:
